<?xml version="1.0"?>
<package>
  <name>rosban_csa_mdp</name>
  <version>0.0.0</version>
  <description>This package provide tools to solve Continuous State and Action Markov Decision Processes</description>

  <maintainer email="medrimonia@gmail.com">medrimonia</maintainer>
  <author email="medrimonia@gmail.com">medrimonia</author>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>NCY</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>regression_experiments</build_depend> <!-- git@bitbucket.org:rhoban/regression_experiments.git -->
  <build_depend>rosban_fa</build_depend> <!-- git@bitbucket.org:rhoban/rosban_fa.git -->

  <run_depend>regression_experiments</run_depend>
  <run_depend>rosban_fa</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
