<?xml version="1.0"?>
<package>
  <name>rhoban_csa_mdp</name>
  <version>0.0.0</version>
  <description>This package provide tools to solve Continuous State and Action Markov Decision Processes</description>

  <maintainer email="medrimonia@gmail.com">medrimonia</maintainer>
  <author email="medrimonia@gmail.com">medrimonia</author>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>NCY</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rhoban_fa</build_depend> <!-- rhoban/function_approximators.git -->

  <run_depend>rhoban_fa</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
